--- a/package.json
+++ b/package.json
@@ -14,13 +14,9 @@
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^4.0.14",
+        "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.17.2",
-        "sass-loader": "^7.1.0",
-        "vue": "^2.5.7",
-        "vue-template-compiler": "^2.6.7"
+        "vue": "^2.5.7"
     },
     "dependencies": {
         "vue-router": "^3.0.2",
