--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.17.2",
+        "sass-loader": "^7.1.0",
         "vue": "^2.5.7"
     },
     "dependencies": {
