--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.17.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.7"
-    },
-    "dependencies": {
+        "vue": "^2.5.7",
         "vue-axios": "^2.1.4",
-        "vue-router": "^3.0.2"
-    }
+        "vue-loader": "^14.2.2",
+        "vue-router": "^3.0.2",
+        "vue-template-compiler": "^2.6.7"
+    },
+    "dependencies": {}
 }
