--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "gloudemans/shoppingcart": "^2.5",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "unisharp/laravel-filemanager": "~1.8"
+        "unisharp/laravel-filemanager": "dev-master"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
